; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/oprofile/extr_op_model_amd.c_get_ibs_offset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/oprofile/extr_op_model_amd.c_get_ibs_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSR_AMD64_IBSCTL = common dso_local global i32 0, align 4
@IBSCTL_LVT_OFFSET_VALID = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@IBSCTL_LVT_OFFSET_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_ibs_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_ibs_offset() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @MSR_AMD64_IBSCTL, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @rdmsrl(i32 %3, i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @IBSCTL_LVT_OFFSET_VALID, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %0
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %1, align 4
  br label %17

13:                                               ; preds = %0
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* @IBSCTL_LVT_OFFSET_MASK, align 4
  %16 = and i32 %14, %15
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32 @rdmsrl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
